Add `audioTrackIndex` to configuration object

--- a/demo/index.html
+++ b/demo/index.html
@@ -102,6 +102,7 @@
                 lazyLoadMaxDuration: 3 * 60,
                 seekType: 'range',
                 liveBufferLatencyChasing: document.getElementById('liveBufferLatencyChasing').checked,
+                audioTrackIndex: 0,
             });
             player.attachMediaElement(element);
             player.load();
